[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
base64 = "0.12"

[[bin]]
name = "challenge1"
path = "src/challenge1.rs"

[[bin]]
name = "challenge2"
path = "src/challenge2.rs"
